# backbone-pas-sat

./: .gitignore  README.md  download_benchmarks.sh  main.py  predict.py  pyproject.toml
LICENSES/: NEUROBACK-LICENSE
data/satcomp_holdout/2024/: sgen1-sat-180-100.cnf.xz  sgen1-unsat-121-100.cnf.xz
data/satcomp_holdout/2025/: tseitin_grid_n12_m12.cnf.xz  tseitin_n188_d3.cnf.xz
model/: __init__.py  gt_model.py
notebooks/: 01_predict_backbone.ipynb  02_test_solvers.ipynb  03_trust_region.ipynb
preprocessing/: __init__.py  cnf_to_graph.py
